增加计网笔记

--- a/计算机网络/计算机网络笔记.md
+++ b/计算机网络/计算机网络笔记.md
@@ -1,3 +1,664 @@
 # 第一章 概述
 
-1、计算机网络：所谓计算机网络，会议是利用通信设备和线路将地理位置不同的、功能独立的 多个计算机系统互连起来，以功能完善的网络软件实现网络中**资源共享**和**数据通讯**的系统。
+1、计算机网络：所谓计算机网络，是利用通信设备和线路将地理位置不同的、功能独立的多个计算机系统互连起来，以功能完善的网络软件实现网络中**资源共享**和**数据通讯**的系统。
+
+2、计算机网络如果按网络的作用范围进行分类，可分为**广域网（WAN）**、**局域网（LAN）**、**城域网（MAN）**和**个人区域网 PAN**。
+
+3、大小写Internet的区别：
+
+- 以小写字母 i 开始的 internet（互联网）是一个通用名词，它泛指由多个计算机网络互连而成的网络。在这些网络之间的通信协议（即通信规则）可以是任意的。
+- 以大写字母I开始的的 Internet（因特网）则是一个专用名词，它指当前全球最大的、开放的、由众多网络相互连接而成的特定计算机网络，它采用 TCP/IP 协议族作为通信的规则，且其前身是美国的 ARPANET。
+
+4、因特网的工作方式：**边缘部分**、**核心部分**
+
+- 边缘部分：由所有连接在互联网上的**主机**（又称**端系统**）组成，其作用是**进行信息处理**，包括进行通信（传送数据、音频或视频）和资源共享。
+- 核心部分：由大量**网络**和连接这些网络的**路由器**组成，其作用是**进行分组交换**
+
+5、在网络边缘的端系统中运行的程序之间的**两种通信方式**：**客户-服务器方式**（C/S 方式）、**对等连接方式**（P2P 方式）
+
+- **客户-服务器方式**
+  - **工作方式：**
+    - 客户-服务器方式所描述的是进程之间服务和被服务的关系。
+    - 客户是服务的请求方，服务器是服务的提供方。
+  - **工作特点：**
+    - 客户程序的特点：必须知道服务器程序的地址
+    - 服务器程序的特点：用于提供服务，需要可同时处理多个请求、持续运行、被动等待。
+
+- **对等连接方式**
+  - **工作方式：**
+    - 不区分服务请求方还是服务提供方。只要两个主机都运行了对等连接软件，它们就可以进行平等的、对等连接通信。
+    - 双方都可以下载对方已经存储在硬盘中的共享文档。
+  - **工作特点：**对等连接中的每一个主机既是客户又同时是服务器。
+
+6、**因特网的核心部分**：要向网络边缘中的大量主机提供连通性，使边缘部分中的任何一个主机都能够向其他主机通信。
+
+- 在网络核心部分起特殊作用的是**路由器**。
+- 路由器是实现分组交换的关键构件，其任务是转发收到的分组。
+
+7、三种交换方式：**电路交换**、**分组交换**、**报文交换**。从通信资源的分配角度来看，“交换”，就是按照某种方式动态地分配传输线路的资源。
+
+**三种交换的比较**
+
+8、计算机网络的性能：**速率**、**带宽**、**吞吐量**、**时延**、**时延带宽积**、**利用率**。
+
+9、分层体系结构
+
+TCP/IP 是四层的体系结构：应用层、运输层、网际层和网络接口层。
+
+五层协议的体系结构：应用层、运输层、网际层、数据链路层和物理层
+
+![image-20210526165302819](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210526165302819.png)
+
+**为什么协议是水平的，服务是垂直的？**
+
+协议是“水平的”，即协议是控制对等实体之间通信的规则。
+
+服务是“垂直的”，即服务是由下层向上层通过层间接口提供的。
+
+# 第二章 物理层
+
+1、物理层的主要任务：确定与传输媒体的接口的一些特性。
+
+- 机械特性：指明接口所用接线器的形状和尺寸、引线数目和排列、固定和锁定装置等等。
+
+- 电气特性：指明在接口电缆的各条线上出现的电压的范围。
+
+- 功能特性：指明某条线上出现的某一电平的电压表示何种意义 
+
+- 过程特性：指明对于不同功能的各种可能事件的出现顺序。
+
+: 指明对于不同功能的各种可能事件的出现顺序。
+
+2、一个数据通信系统可划分为三大部分： 源系统（源点和发送器） 、传输系统、目的系统（目的站）
+
+- 数据是运送消息的实体。
+
+- 信号则是数据的电气或电磁的表现。
+
+- 模拟信号代表消息的参数的取值是连续的。
+
+- 数字信号代表消息的参数的取值是离散的。
+
+- 码元：在使用时间域 （或简称为时域） 的波形表示数字信号时， 则代表不同离散数值的基本波形。
+
+3、三种通信基本形式
+
+信道：表示向某一方向的传送信息的媒体。
+
+根据双方信息交互方式不同，划分为：
+
+- 单向通信 ( 单工通信 ) : 只能有一个方向的通信而没有反方向的交互。 
+
+- 双向交替通信（半双工通信）：通信的双方都可以发送接收信息，但不能同时发送 / 接收。
+- 双向同时通信（全双工通信）：通信的双方可以同时发送和接收信息。
+
+：通信的双方可以同时发送和接收信息。
+
+三种通信形式的区别：单向通信只需要一条信道， 双向交替通信和双向同时通信需要两条信道，双向同时通信效率最高。
+
+4、几种信号和信号的调制：
+
+- 基带信号 : 来自信源的信号。
+
+- 带通信号： 经过载波调制后的信号。
+
+调制 ：基带信号往往包含有较多的低频成分，甚至有直流成分，而许多信道并不能传输这种低频分量或直流分量，需要对其进行调制滤除。
+
+调制分类：
+
+- 基带调制： 仅对基带信号的波形进行变换， 使它能够与信道特性相适应。变换后的信号仍然是基带信号。
+- 带通调制： 使用载波进行调制，把基带信号的频率范围搬移到较高的频段，转换为模拟信号，以便在模拟信道中传输。
+
+5、常用的编码方式
+
+- 不归零制：正电平表示 1，负电平表示 0
+- 归零制： 正脉冲代表 1，负脉冲代表 0 
+- 曼彻斯特编码：用电压的变化表示 0 和 1。位周期中心的向上跳变代表 0，位周期中心的向下跳变代表 1。**中心上0下1。**
+- 差分曼彻斯特编码：用电压的变化表示 0 和 1。在每一位的中心处始终都有跳变。位开始边界有跳变代表 0，而位开始边界没有跳变代表 1。**边界有变0无变1。**
+
+![image-20210526205332115](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210526205332115.png)
+
+6、基带信号的带通调制方法：
+
+- 调幅 (AM)：载波的振幅随基带数字信号而变化。
+- 调频 (FM)：载波的频率随基带数字信号而变化。
+- 调相 (PM) ：载波的初始相位随基带数字信号而变化。
+
+7、限制码元在信道上的传输速率的因素
+
+- 信道能够通过的频率范围
+- 信噪比
+
+**信噪比：**信号的平均功率和噪声的平均功率之比，常记为 S/N。并用分贝 (dB) 作为度量单位。
+
+公式：<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210526211246876.png" alt="image-20210526211246876" style="zoom: 50%;" />
+
+>例如，当 S/N = 10 时，信噪比为 10 dB，而当 S/N = 1000时，信噪比为 30 dB。
+
+**香农公式：**用于计算信道的极限信息传输速率C
+
+<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210526211352979.png" alt="image-20210526211352979" style="zoom:50%;" />
+
+其中：W 为信道的带宽（以 Hz 为单位）；
+			S 为信道内所传信号的平均功率；
+			N 为信道内部的高斯噪声功率。  
+
+从以上公式可知：
+
+- 信道的带宽或信道中的信噪比越大，则信息的极限传输速率就越高。 
+- 只要信息传输速率低于信道的极限信息传输速率，就一定可以找到某种办法来实现无差错的传输。 
+- 若信道带宽 W 或信噪比 S/N 没有上限（当然实际信道不可能是这样的），则信道的极限信息传输速率 C 也就没有上限。
+- 实际信道上能够达到的信息传输速率要比香农的极限传输速率低不少。 
+
+8、物理层下面的传输媒体 
+
+传输媒体: 它就是数据传输系统中在发送器和接收器之间的物理通路。
+
+- 导引型传输媒体：双绞线、同轴电缆、光纤
+- 非导引型传输媒体：无线、红外、大气激光
+
+9、常用的信道复用技术
+
+复用：允许用户使用一个共享信道进行通信，降低成本，提高利用率。
+
+- 频分复用：所有用户在同样的时间占用不同的带宽资源。（**注意，这里的“带宽”是频率带宽而不是数据的发送速率**）
+
+  <img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210526212522051.png" alt="image-20210526212522051" style="zoom: 67%;" />
+
+- 时分复用 (TDM)：将时间划分为一段段等长的时分复用帧（TDM 帧）。每一个时分复用的用户在每一个 TDM 帧中占用固定序号的时隙。每一个用户所占用的时隙是周期性地出现（其周期就是 TDM  帧的长度）。时分复用的所有用户是在不同的时间占用同样的频带宽度。
+
+  <img src="C:%5CUsers%5CAsus%5CAppData%5CRoaming%5CTypora%5Ctypora-user-images%5Cimage-20210526212743056.png" alt="image-20210526212743056" style="zoom:67%;" />
+
+- 统计时分复用 (STDM)：STDM 帧不是固定分配时隙，而是按需动态地分配时隙。因此统计时分复用可以提高线路的利用率
+
+- 波分复用 (WDM)：波分复用就是光的频分复用。
+
+- 码分复用 (CDM)：各用户使用经过特殊挑选的不同码型，因此彼此不会造成干扰。
+
+**码分复用**
+
+- 每一个比特时间划分为 m 个短的间隔，称为码片。
+
+- 每个站被指派一个唯一的 m bit 码片序列。
+
+  - 如发送比特 1，则发送自己的 m bit 码片序列。
+  - 如发送比特 0，则发送该码片序列的二进制反码。
+
+  >例如，S 站的 8 bit 码片序列是 00011011。
+  >发送比特 1 时，就发送序列 00011011，
+  >发送比特 0 时，就发送序列 11100100。
+
+9、宽带接入技术
+
+有线宽带接入：非对称数字用户线 ADSL、光纤同轴混合网HFC网、FTTx技术
+
+**非对称数字用户线 ADSL**
+
+用数字技术对现有的模拟电话用户线进行改造，把原来没有被利用的高端频谱留给用户上网使用。
+
+特点：
+
+- 上行和下行带宽做成不对称的。
+- ADSL 在用户线（铜线）的两端各安装一个 ADSL 调制解调器。
+
+(9) 用户从因特网的宽带接入方法有非对称数字用户线 
+
+ADSL（用数字技术对现有的模拟电话用户线进行改造） ，光纤同轴混合网 
+
+HFC（在有线电视网基础上开发的） 
+
+和 FTTx（光纤入户）
+
+(10) 为了有效地利用光纤资源，在光纤干线和用户之间广泛使用无源光网络 
+
+PON。无源光网
+
+络无须配备电源，在长期运营成本和管理成本都很低。以太网无源光网络 
+
+EPON、吉比特无
+
+源光网络 GPON。
+
+# 第三章 数据链路层
+
+1、数据链路层使用的信道：
+
+- 点对点信道：使用一对一的点对点通信方式。
+- 广播信道：使用一对多的广播通信方式。
+
+**使用点对点信道的数据链路层**
+
+链路（物理链路）：一条无源的点到点的物理线路段，中间没有任何其他的交换结点。
+
+数据链路（逻辑链路）：除了物理线路外，还必须有通信协议来控制这些数据的传输。若把实现这些协议的硬件和软件加到链路上，就构成了数据链路。即物理链路 + 通信协议 = 逻辑链路。
+
+帧： 数据链路层传送的协议数据单元
+
+2、数据链路层三个基本问题
+
+- 封装成帧
+- 透明传输
+- 差错控制
+
+**封装成帧**： 在一段数据的前后分别添加首部和尾部，然后就构成了一个帧。确定帧的界限。首部和尾部的一个重要作用就是进行帧定界。
+
+<img src="C:%5CUsers%5CAsus%5CAppData%5CRoaming%5CTypora%5Ctypora-user-images%5Cimage-20210527145836238.png" alt="image-20210527145836238" style="zoom:50%;" />
+
+通常使用控制字符进行帧定界，SOH(Start Of Header) 放在帧最前面，表示首部开始；EOT(End Of Transmission) 表示帧的结束。
+
+![image-20210527150019675](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527150019675.png)
+
+**透明传输**： 当所传数据中的二进制代码恰好与某一控制信息完全一样时（例如EOT）， 必须有可靠的措施， 使接收方不会误认为是控制信息。
+
+解决方法：字节填充/字符填充
+
+- 发送端的数据链路层在数据中出现控制字符“SOH”或“EOT”的前面插入一个转义字符“ESC”
+- 接收端的数据链路层在将数据送往网络层之前删除插入的转义字符。
+
+**差错检测**：
+
+- 比特差错： 在传输过程中可能会产生比特差错： 1 可能会变成 0 ，而 0 也可能变成 1。 
+
+- 误码率 BER：在一段时间内， 传输错误的比特占所传输比特总数的比率（与信噪比有关）。
+
+为保证数据传输可靠性，需采取差错检测措施：
+
+1. 循环冗余检验
+
+   - 在发送端，先把数据划分为组。假定每组 k 个比特。
+
+   - 假设待传送的一组数据 M = 101001（现在 k = 6）。我们在 M 的后面再添加供差错检测用的 n 位冗余码一起发送。  
+
+   - 计算冗余码
+
+     - 1、用二进制的模 2 运算进行 2n 乘 M 的运算，这相当于在 M 后面添加 n 个 0。
+
+     - 2、得到的 (k + n) 位的数除以事先选定好的长度为 (n + 1) 位的除数 P，得出商是 Q，而余数是 R，余数 R 比除数 P 少 1 位，即 R 是 n 位。 
+
+     - 3、将余数 R 作为冗余码拼接在数据 M 后面发送出去。
+
+       **不会！爬！**
+
+       >二进制计算：模2 后面添加n个0；除法，右移n位；乘法，左移n位。
+       >
+       >**例子**
+       >
+       ><img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527152426582.png" alt="image-20210527152426582" style="zoom:67%;" />
+
+3、点对点协议PPP
+
+PPP协议的组成部分：
+
+- 一个将 IP 数据报封装到串行链路的方法。
+- 链路控制协议LCP (Link Control Protocol) 
+- 网络控制协议NCP (Network Control Protocol) 
+
+PPP 协议用在 SONET/SDH 链路时，使用同步传输。这时 PPP 协议采用零比特填充方法来实现透明传输。
+
+- 在发送端，只要发现有 5 个连续 1，则立即填入一个 0。
+- 接收端对帧中的比特流进行扫描。每当发现 5 个连续1时，就把这 5 个连续 1 后的一个 0 删除。
+
+4、局域网
+
+**特点：**网络为一个单位所拥有；地理范围和站点数目均有限。 
+
+**优点：**
+
+- 具有广播功能， 从一个站点可很方便地访问全网。 局域网上的主机可共享连接在局域网上的各种硬件和软件资源。 
+- 便于系统的扩展和逐渐地演变，各设备的位置可灵活调整和改变。
+- 提高了系统的可靠性、 可用性和生存性。 
+
+**局域网拓扑结构：**星形网、总线王、环形网。
+
+**IEEE 802.3** 是第一个 IEEE 的以太网标准。
+
+**媒体共享技术：**
+
+- 静态划分信道： 频分复用、时分复用、波分复用、码分复用
+- 动态媒体接入控制（多点接入） ：随机接入；受控接入 ，如多点线路探询，或轮询。
+
+**局域网的数据链路层的两个子层：**
+
+- 逻辑链路控制 LLC (Logical Link Control) 子层
+- 媒体接入控制 MAC (Medium Access Control) 子层。
+
+其中：
+
+- 接入到传输媒体有关的内容都放在MAC子层， 而 LLC 子层则与传输媒体无关。
+
+
+- 不管采用何种协议的局域网对 LLC 子层来说都是透明的。现在一般不考虑 LLC 子层。
+
+
+**适配器**
+
+计算机与外界局域网的通信要通过适配器 （网络接口 / 网卡），计算机的硬件地址就藏在适配器的 ROM中。
+
+适配器的功能：
+
+- 进行串行/并行转换。
+- 对数据进行缓存。
+- 在计算机的操作系统安装设备驱动程序。
+- 实现以太网协议。 
+
+5、以太网
+
+以太网采取的措施：
+
+1. 以太网采用较为灵活的无连接的工作方式
+   - 即不必先建立连接就可以直接发送数据。
+   - 以太网对发送的数据帧不进行编号， 也不要求对方发回确认。 
+   - 目的站收到有差错帧就把它丢弃，差错纠正由高层决定。
+2. 以太网发送的数据都使用曼彻斯特编码
+
+CSMA/CD协议：载波监听多点接入 / 碰撞检测  
+
+- 载波监听： 每一个站在发送数据之前先要检测一下总线上是否有其他计算机在发送数据，如果有，则暂时不要发送数据，以免发生碰撞。 （获取发送权）
+- 碰撞检测： 计算机边发送数据边检测信道上的信号电压大小。出现了碰撞，就要立即停止发送。（发送中检测信道）
+
+CSMA/CD协议特点：
+
+- 使用 CSMA/CD 协议的以太网不能进行全双工通信而只能进行双向交替通信（半双工通信）
+- 每个站在发送数据之后的一小段时间内，存在着遭遇碰撞的可能性。
+- 这种发送的不确定性使整个以太网的平均通信量远小于以太网的最高数据率。
+
+争用期： 以太网的端到端往返时延 2τ。
+
+- 经过争用期这段时间还没有检测到碰撞，才能肯定这次发送不会发生碰撞。
+
+- 10 Mbit/s 以太网取 51.2μs 为争用期的长度。对于 10 Mbit/s 以太网，在争用期内可发送 512 bit，即 64 字节。
+- 最短有效帧长为 64 字节。
+
+6、使用集线器的星形拓扑
+
+目前以太网基本上都是使用集线器的双绞线以太网。
+
+**星形以太网10BASE-T**<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527162539283.png" alt="image-20210527162539283" style="zoom: 50%;" />
+
+**集线器的特点：**
+
+- 使用集线器的以太网在逻辑上仍是一个总线网。
+-  集线器工作在物理层。
+
+7、以太网的MAC层
+
+**MAC层的硬件地址：** 
+
+在局域网中，硬件地址又称为物理地址，或 MAC 地址。MAC地址实际上就是适配器地址或适配器标识符，与主机所在的地点无关。 48 位长。
+
+**48位的MAC地址**
+
+MAC 地址字段可采用 6 字节 ( 48位)
+
+- 给厂家分配地址字段高位 24 位，称组织唯一标识符。
+- 低位 24 位由厂家自行指派，称为扩展唯一标识符。
+
+<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527163237398.png" alt="image-20210527163237398" style="zoom:67%;" />
+
+**扩展的以太网：**
+
+- 在物理层扩展以太网
+- 在数据链路层扩展以太网 
+
+在物理层扩展以太网：使用光纤扩展、使用集线器扩展
+
+在数据链路层扩展以太网：以太网交换机
+
+**用集线器扩展以太网的优缺点**
+
+- 优点
+  - 使原来属于不同碰撞域的以太网上的计算机能够进行跨碰撞域的通信
+  - 扩大了以太网覆盖的地理范围。
+- 缺点
+  - 碰撞域增大了，但总的吞吐量并未提高。
+  - 如果不同的碰撞域使用不同的数据率，那么就不能用集线器将它们互连起来。   
+
+**以太网交换机的特点：**
+
+- 以太网交换机实质上就是一个多接口的网桥。
+- 每个接口都直接与一个单台主机或另一个以太网交换机相连，并且一般都工作在全双工方式。
+- 以太网交换机具有并行性。
+
+交换机的交换方式：存储转发、直通。
+
+8、**交换机的自学习功能**
+
+- 以太网交换机运行自学习算法自动维护交换表。
+- 开始时，以太网交换机里面的交换表是空的。
+
+<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527164424880.png" alt="image-20210527164424880" style="zoom:67%;" />
+
+**交换机自学习和转发帧的步骤归纳**
+
+- 交换机收到一帧后先进行自学习。查找交换表中与收到帧的源地址有无相匹配的项目。
+  - 如没有，就在交换表中增加一个项目（源地址、进入的接口和有效时间）。
+  - 如有，则把原有的项目进行更新（进入的接口或有效时间）。
+- 转发帧。查找交换表中与收到帧的目的地址有无相匹配的项目。
+  - 如没有，则向所有其他接口（进入的接口除外）转发。
+  - 如有，则按交换表中给出的接口进行转发。
+  - 若交换表中给出的接口就是该帧进入交换机的接口，则应丢弃这个帧（因为这时不需要经过交换机进行转发）。
+
+<img src="C:%5CUsers%5CAsus%5CAppData%5CRoaming%5CTypora%5Ctypora-user-images%5Cimage-20210527164632679.png" alt="image-20210527164632679" style="zoom:50%;" />
+
+<img src="C:%5CUsers%5CAsus%5CAppData%5CRoaming%5CTypora%5Ctypora-user-images%5Cimage-20210527164707196.png" alt="image-20210527164707196" style="zoom:50%;" />
+
+# 第四章 网络层
+
+1、分类的IP地址
+
+**IP 地址及其表示方法 **
+
+- IP 地址就是给每个连接在互联网上的主机分配一个在全世界范围是**唯一**的 32 位的标识符。
+
+- 分类的 **IP** 地址：网络号字段 **+**主机号字段
+
+  <img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527170800584.png" alt="image-20210527170800584" style="zoom:67%;" />
+
+  <img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527170859241.png" alt="image-20210527170859241" style="zoom:67%;" />
+
+**常用的三种类别的 IP 地址**
+
+![image-20210527171005983](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527171005983.png)
+
+**IP地址和物理地址的区别：** 
+
+- IP 地址是网络层和以上各层使用的地址， 是逻辑地址。
+- MAC 地址是数据链路层和物理层使用的物理地址。 
+
+2、地址解析协议 ARP
+
+**ARP 作用：**从网络层使用的 IP 地址，解析出在数据链路层使用的硬件地址。
+
+>RARP 协议负责将 MAC地址转换成 IP 地址
+
+3、划分子网和构造超网
+
+**划分子网**
+
+没有划分子网时，IP 地址是两级结构，划分子网后，变成三级结构。
+
+<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527181454246.png" alt="image-20210527181454246" style="zoom: 67%;" />
+
+划分子网的基本思路：
+
+1. 划分子网只是从主机号借用若干个位作为子网号，不改变网络号
+2. 凡是从其他网络发送给本单位某个主机的 IP 数据报，仍然是根据 IP 数据报的目的网络号 net-id，先找到连接在本单位网络上的路由器。
+3. 然后此路由器在收到 IP 数据报后，再按目的网络号 net-id 和子网号 subnet-id 找到目的子网。
+4. 最后就将 IP 数据报直接交付目的主机。 
+
+划分子网纯属一个**单位内部**的事情，对外部网络透明，对外仍然表现为没有划分子网的一个网络。
+
+**子网掩码**
+
+- 从一个 IP 数据报的首部并无法判断源主机或目的主机所连接的网络是否进行了子网划分。
+
+- 使用子网掩码可以找出 IP 地址中的子网部分。  
+
+规则：
+
+- 子网掩码长度 ＝ 32 位
+
+- 某位 ＝ 1：IP地址中的对应位为网络号和子网号
+
+- 某位 ＝ 0：IP地址中的对应位为主机号  
+
+**(IP 地址) AND (子网掩码) =网络地址**
+
+**构成超网**
+
+前缀长度不超过 23 位的 CIDR 地址块都包含了多个 C 类地址。这些 C 类地址合起来就构成了超网。
+
+4、路由选择协议
+
+<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527183948305.png" alt="image-20210527183948305" style="zoom:80%;" />
+
+内部网关协议 IGP：具体的协议有多种，如 RIP 和 OSPF 等。
+
+外部网关协议 EGP：目前使用的协议就是 BGP
+
+**内部网关协议 RIP**
+
+- RIP 是一种分布式的基于距离向量的路由选择协议。
+- RIP 协议要求网络中的每一个路由器都要维护从它自己到其他每一个目的网络的距离记录。
+
+**内部网关协议 RIP的三个特点**
+
+- 仅和相邻路由器交换信息。
+- 交换的信息是当前本路由器所知道的全部信息，即自己的路由表。
+- 按固定的时间间隔交换路由信息，例如，每隔 30 秒。
+
+**内部网关协议 OSPF**：是分布式的链路状态协议
+
+5、路由器
+
+**路由器的主要作用是：**
+
+- 连通不同的网络。
+- 选择信息传送的线路。
+
+其任务是转发分组。
+
+**路由器结构**
+
+整个的路由器结构可划分为两大部分：
+
+- 路由选择部分
+- 分组转发部分
+
+**路由选择部分：**
+
+- 其核心构件是路由选择处理机。
+- 路由选择处理机的任务是根据所选定的路由选择协议构造出路由表，同时经常或定期地和相邻路由器交换路由信息而不断地更新和维护路由表。
+
+**分组转发部分**
+
+由三部分组成：
+
+- 交换结构：又称为交换组织，其作用是根据转发表对分组进行处理。
+
+- 一组输入端口
+
+- 一组输出端口
+
+  （请注意：这里的端口就是硬件接口）
+
+6、解决IP地址不足的问题
+
+IPV6、NAT、虚拟局域网
+
+**IPV6**
+
+IPv6 将地址从 IPv4 的 32 位 增大到了 128 位。 
+
+**网络地址转换 NAT**
+
+# 第五章 运输层
+
+1、运输层的作用
+
+- 提供应用进程间端到端的逻辑通信
+- 基于端口的复用和分用功能
+- 根据应用程序的不同需求，运输层需要有两种不同的运输协议，即面向连接的 TCP 和无连接的 UDP 。
+- 屏蔽作用。运输层向高层用户屏蔽了低层网络核心的细节
+
+2、运输层的两个主要协议：UDP、TCP
+
+**UDP 无连接协议**
+
+- 提供无连接服务。
+- 在传送数据之前不需要先建立连接。
+- 传送的数据单位协议是 UDP 报文或用户数据报。
+- 对方的运输层在收到 UDP 报文后，不需要给出任何确认。
+- 虽然 UDP 不提供可靠交付，但在某些情况下 UDP 是一种最有效的工作方式。
+
+**TCP 面向连接的协议**
+
+- 提供面向连接的服务。
+- 传送的数据单位协议是 TCP 报文段 
+- TCP 不提供广播或多播服务。
+- 由于 TCP 要提供可靠的、面向连接的运输服务，因此不可避免地增加了许多的开销。这不仅使协议数据单元的首部增大很多，还要占用许多的处理机资源。
+
+3、UDP
+
+**UDP功能：**复用和分用、差错检测
+
+**UDP 的主要特点 **：
+
+- UDP 是无连接的
+- UDP 使用尽最大努力交付，即不保证可靠交付
+- UDP 是面向报文的
+- UDP 没有拥塞控制
+- UDP 支持一对一、一对多、多对一和多对多的交互通信。
+- UDP 的首部开销小，只有 8 个字节
+
+4、TCP
+
+**TCP 的主要特点**
+
+- TCP 是面向连接的运输层协议。
+- 每一条 TCP 连接只能有两个端点 ，每一条 TCP 连接只能是一对一。 
+- TCP 提供可靠交付的服务。
+- TCP 提供全双工通信。
+- 面向字节流。“流”：指的是流入或流出进程的字节序列。
+
+**利用滑动窗口实现流量控制**
+
+位于发送窗口内的分组都可连续发送出去，而不需要等待对方的确认。
+
+发送方每收到一个确认，就把发送窗口向前滑动一个分组的位置。
+
+![image-20210527210752087](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527210752087.png)
+
+TCP 连接的每一端都必须设有两个窗口——一个发送窗口和一个接收窗口。
+
+**TCP的拥塞控制**
+
+慢开始；拥塞避免；快重传；快恢复。
+
+**加法增大，乘法减小**
+
+# 第六章 应用层
+
+1、文件传送协议 FTP 
+
+2、简单文件传送协议 TFTP  
+
+3、远程终端协议 TELNET
+
+4、网络虚拟终端 NVT 格式
+
+5、电子邮件
+
+发送邮件的协议：SMTP
+
+读取邮件的协议：POP3 和 IMAP
+
+为什么要有域名
+
+域名服务器的作用
+
+FTP TFTP
+
+IP地址不足，如何改进？
+
+![image-20210527215213240](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210527215213240.png)
