添加窗口笔记

--- a/红宝书读书笔记/红宝书笔记.md
+++ b/红宝书读书笔记/红宝书笔记.md
@@ -2564,3 +2564,168 @@ windows.innerWidth ? windows.innerWidth : document.body.clientWidth;
 - resizeBy()接收宽度和高度各要缩放多少
 
 缩放窗口的方法可能会被浏览器禁用
+
+#### 12.1.4 视口位置
+
+获取文档相对于视口的滚动距离
+
+1. 水平距离：window.pageXoffset、window. scrollX（返回相等的值）
+2. 垂直距离：window.pageYoffset、window.scrollY（返回相等的值）
+
+**滚动页面：**使用 scroll()、scrollTo()和 scrollBy()方法滚动页面。
+
+这 3 个方法都接收表示相对视口距离的 *x* 和 *y* 坐标，这两个参数在前两个方法中表示要滚动到的坐标，在最后一个方法中表示滚动的距离。
+
+`To`绝对坐标，`By`相对距离
+
+#### 12.1.5 系统对话框
+
+alert、confirm、prompt
+
+**confirm**
+
+确认框有两个按钮：“Cancel”（取消）和“OK”（确定）。
+
+我们可以判断 confirm()方法的返回值：true 表示单击了 OK 按钮，false 表示单击了 Cancel 按钮或对话框关闭，进行不同的操作。
+
+**prompt()**
+
+提示用户输入消息。
+
+prompt()接收两个参数：要显示给用户的文本，以及文本框的默认值（可以是空字符串）。
+
+如果用户单击了 OK 按钮，则 prompt()会返回文本框中的值。如果用户单击了 Cancel 按钮，或者对话框被关闭，则 prompt()会返回 null。
+
+>扩展：打印对话框和查找对话框
+>
+>// 显示打印对话框
+>
+>window.print(); 
+>
+>// 显示查找对话框
+>
+>window.find(); 
+
+### 12.2 location对象
+
+- location 是最有用的 BOM 对象之一，提供了当前窗口中加载文档的信息，以及通常的导航功能。
+
+- window.location 和 document.location 指向同一个对象
+
+**属性**
+
+- location.hash ：URL 散列值（井号后跟零或多个字符），如果没有则为空字符串。
+- location.host ：服务器名及端口号
+- location.hostname ：服务器名
+- location.href ：当前加载页面的完整 URL
+- location.pathname ：URL 中的路径和（或）文件名
+- location.port ： 端口
+- location.search ：URL查询字符串，以？开头
+
+#### 12.2.1 查询字符串
+
+逐个访问链接中的查询参数
+
+手动实现：
+
+```js
+let getQueryStringArgs = function(){
+    let qs = location.search.length>0?location.search.substring(1):"";
+    let args = {};
+    
+    for(let item of qs.split('&').map(kv => kv.split('='))){
+        //解码
+        let name = decodeURIComponent(item[0]),
+            value = decodeURIComponent(item[1]);
+        if(name.length){
+            args[name]=value;
+        }
+    }
+    return args;
+}
+```
+
+**提供了一个方法：URLSearchParams**
+
+`URLSearchParams` 提供了一组标准 API 方法，通过它们可以检查和修改查询字符串。给`URLSearchParams` 构造函数传入一个查询字符串，就可以创建一个实例。
+
+这个实例上暴露了 `has()`、`get()`、`set()`和 `delete()`等方法，可以对查询字符串执行相应操作。
+
+```js
+let qs = "?q=javascript&num=10"; 
+
+let searchParams = new URLSearchParams(qs); 
+
+alert(searchParams.toString()); // " q=javascript&num=10" 
+
+searchParams.has("num"); // true 
+searchParams.get("num"); // 10 
+searchParams.set("page", "3"); 
+
+alert(searchParams.toString()); // "q=javascript&num=10&page=3" 
+searchParams.delete("q"); 
+alert(searchParams.toString()); // " num=10&page=3"
+```
+
+大多数支持 URLSearchParams 的浏览器也支持将 URLSearchParams 的实例用作可迭代对象：
+
+```js
+let qs = "?q=javascript&num=10"; 
+
+let searchParams = new URLSearchParams(qs); 
+
+for (let param of searchParams) { 
+ console.log(param); 
+} 
+
+// ["q", "javascript"] 
+// ["num", "10"] 
+```
+
+#### 12.2.2 操作地址
+
+修改 location 对象修改浏览器的地址。
+
+1、使用 assign()方法并传入一个 URL
+
+```js
+location.assign("https://www.baidu.com/")
+```
+
+立即启动导航到新 URL 的操作，同时在浏览器历史记录中增加一条记录。
+
+2、location.href
+
+```js
+location.href = "https://www.baidu.com/";
+```
+
+3、window.location
+
+```js
+window.location = "https://www.baidu.com/";
+```
+
+location.href 或 window.location 本质上也会以同一个 URL 值调用 assign()方法。
+
+4、location.replace()
+
+以上方法都会增加历史记录，如果不希望留下记录，则使用location.replace()方法。
+
+5、reload()
+
+重新加载当前显示的页面。调用 reload()而不传参数，页面会以最有效的方式重新加载。也就是说，如果页面自上次请求以来没有修改过，浏览器可能会从缓存中加载页面。
+
+如果想强制从服务器重新加载，则传参数”true“。
+
+修改 location 对象的属性也会修改当前加载的页面。其中，hash、search、hostname、pathname和 port 属性被设置为新值之后都会修改当前 URL。
+
+除了 hash 之外，只要修改 location 的一个属性，就会导致页面重新加载新 URL。
+
+### 12.3 navigator对象
+
+客户端标识浏览器的标准。
+
+**属性/方法**
+
+- plugins ： 返回浏览器安装的插件数组。
