--- a/红宝书读书笔记/红宝书笔记.md
+++ b/红宝书读书笔记/红宝书笔记.md
@@ -2729,3 +2729,180 @@ location.href 或 window.location 本质上也会以同一个 URL 值调用 assi
 **属性/方法**
 
 - plugins ： 返回浏览器安装的插件数组。
+
+## 第13章 客户端检测
+
+检测浏览器，根据不同的浏览器，使用不同的解决方案。
+
+**能力检测**
+
+- 能力检测：测试浏览器是否支持某种特性，一般尽量使用typeof操作符操作。
+
+  ```js
+  if (object.propertyInQuestion) { 
+   // 使用 object.propertyInQuestion 
+  } 
+  ```
+
+- 推荐检测方案：集中监测能力，将检测结果保存在变量中，该变量布尔值用于后面条件语句，省事方便。
+
+**浏览器分析**
+
+- 使用`window.navigator.userAgent`返回字符串值，判断运行在什么浏览器上。
+
+## 第14章 DOM文档对象模型
+
+### 14.1 Node类型
+
+所有节点类型都继承了Node类型，共享相同的属性和方法。
+
+#### 14.1.1 节点类型检测
+
+- 每个节点都有 nodeType 属性，表示该节点的类型。
+- nodeName 始终等于元素的标签名。
+
+```js
+if (someNode.nodeType == 1){ 
+ value = someNode.nodeName; // 会显示元素的标签名
+}
+```
+
+#### 14.1. 2 节点属性
+
+节点属性有7种
+
+父元素：childNodes、fitstChild、lastChild
+
+子元素：parentNode、previousSibling、nextSibling。
+
+通用：ownerDocument属性是一个指向代表整个文档的文档节点的指针
+
+**childNodes属性**
+
+返回子节点的类数组对象。
+
+- 可以使用中括号或items方法访问其中元素。
+
+```js
+let firstChild = someNode.childNodes[0]; 
+let secondChild = someNode.childNodes.item(1); 
+```
+
+- 还提供了一个方法`hasChildNodes()`，这个方法如果返回 true 则说明节点有一个或多个子节点。
+
+**firstChild、lastChild属性**
+
+分别返回childNodes中的第一个节点和最后一个节点。
+
+**parentNode属性**
+
+返回当前元素的父元素。
+
+**previousSibling、nextSibling属性**
+
+分别返回当前元素的前一个兄弟元素、下一个兄弟元素，若不存在返回null
+
+![image-20210610111512912](C:%5CUsers%5CAsus%5CAppData%5CRoaming%5CTypora%5Ctypora-user-images%5Cimage-20210610111512912.png)
+
+
+
+#### 14.1.3 节点方法
+
+节点方法有：appendChild、insertBefore、replaceChild、removeChild、cloneNode、normalize
+
+**appendChild()方法**
+
+作用：向childNodes末尾添加节点
+
+参数：接受一个参数，要添加的节点
+
+返回值：返回新添加的节点
+
+特殊：如果把文档中已存在的节点作为参数传给appendChild，则该节点会从旧位置移动到末尾，而不是在末尾直接添加。**一个节点不会在文档中出现在两个地方**
+
+**insertBefore()方法**
+
+作用：将节点添加到childNodes的特定位置，插入在参照节点之前。
+
+参数：2参，插入节点、参照节点
+
+返回值：插入节点
+
+特殊：参照节点为null，等同于appendChild插入末尾。
+
+**replaceChild()方法**
+
+作用：用于替换节点
+
+参数：2参，插入节点、替换节点
+
+返回值：被替换节点
+
+**removeChild()方法**
+
+作用：移除节点
+
+参数：1参，移除的节点
+
+返回值：被移除的节点
+
+**cloneNode()方法**
+
+作用：克隆节点
+
+参数：1参，布尔值（表示是否深复制）。true深复制，即复制节点及其子DOM树；false浅复制，只复制该节点。
+
+返回值：返回调用该方法节点的一样的节点。
+
+**normalize()方法**
+
+作用：处理文本节点，删除空文本节点，合并相邻文本节点
+
+参数：无
+
+### 14.2 Document类型
+
+文档对象 document 是HTMLDocument 的实例（HTMLDocument继承Document）
+
+获取文档中的`<html>`元素的两种方法
+
+```js
+document.documentElement；
+document.childNodes[0]
+```
+
+获取`<body>`元素
+
+```js
+document.body
+```
+
+获取doctype
+
+```js
+document.doctype
+```
+
+#### 14.3 Text类型
+
+Text 节点中包含的文本可以通过 nodeValue 属性访问。
+
+Text节点的方法有：
+
+- appendData(*text*)，向节点末尾添加文本 *text*； 
+
+- deleteData(*offset, count*)，从位置 *offset* 开始删除 *count* 个字符；
+
+- insertData(*offset, text*)，在位置 *offset* 插入 *text*； 
+
+- replaceData(*offset, count, text*)，用 *text* 替换从位置 *offset* 到 *offset* *+* *count* 的
+
+文本；
+
+- splitText(*offset*)，在位置 *offset* 将当前文本节点拆分为两个文本节点；
+
+- substringData(*offset, count*)，提取从位置 *offset* 到 *offset* *+* *count* 的文本。
+
+
+
+document.createTextNode()可以用来创建新文本节点，它接收一个参数，即要插入节点的文本。
