添加DOM元素类型笔记

--- a/红宝书读书笔记/红宝书笔记.md
+++ b/红宝书读书笔记/红宝书笔记.md
@@ -2883,7 +2883,7 @@ document.body
 document.doctype
 ```
 
-#### 14.3 Text类型
+### 14.3 Text类型
 
 Text 节点中包含的文本可以通过 nodeValue 属性访问。
 
@@ -2906,3 +2906,5 @@ Text节点的方法有：
 
 
 document.createTextNode()可以用来创建新文本节点，它接收一个参数，即要插入节点的文本。
+
+### 14.4 DocumentFragment 类
