增加合并二叉树 非递归题解

--- a/数据结构与算法/二叉树篇/617. 合并二叉树.md
+++ b/数据结构与算法/二叉树篇/617. 合并二叉树.md
@@ -4,6 +4,8 @@
 
 将合并覆盖到root1树上。
 
+**递归**
+
 ```js
 var mergeTrees = function(root1, root2) {
     //本身是树结构符合递归条件
@@ -14,6 +16,41 @@ var mergeTrees = function(root1, root2) {
     //左右子树递归
     root1.left = mergeTrees(root1.left,root2.left);
     root1.right = mergeTrees(root1.right,root2.right);
+    return root1;
+};
+```
+
+**迭代**
+
+```js
+var mergeTrees = function(root1, root2) {
+    if(!root1 && !root2) return null;
+    if(!root1) return root2;
+    if(!root2) return root1;
+    //打平比较
+    const quene = [root1,root2];
+    while(quene.length){
+        let cur1 = quene.shift();
+        let cur2 = quene.shift();
+        cur1.val += cur2.val;
+        if(cur1.left && cur2.left){
+            quene.push(cur1.left);
+            quene.push(cur2.left);
+        }
+
+        if(cur1.right && cur2.right){
+            quene.push(cur1.right);
+            quene.push(cur2.right);
+        }
+
+        if(!cur1.left && cur2.left){
+            cur1.left = cur2.left;
+        }
+
+        if(!cur1.right && cur2.right){
+            cur1.right = cur2.right;
+        }
+    }
     return root1;
 };
 ```
