--- a/数据结构与算法/二叉树篇/判断该二叉树是否为搜索二叉树和完全二叉树.md
+++ b/数据结构与算法/二叉树篇/判断该二叉树是否为搜索二叉树和完全二叉树.md
@@ -44,10 +44,12 @@ function judgeIt( root ) {
 **判断搜索二叉树：**
 
 1. 设置min -Inifity maxInfity
-2. 如果val <min || val>max return false
+2. 如果val <min || val>max return false **注意：当前只判断当前结点的val与最大最小的比较，子结点由递归去处理**
 3. 判断左右子树是否为搜索二叉树，左：min min ，max root.val ；右：min root.val max max。
 
 **判断完全二叉树：**
+> 完全二叉树的定义：一棵深度为k的有n个结点的二叉树，对树中的结点按从上至下、从左到右的顺序进行编号，如果编号为i（1≤i≤n）的结点与满二叉树中编号为i的结点在二叉树中的位置相同，则这棵二叉树称为完全二叉树。
+> 换句话说：完全二叉树是不跳跃的从左至右层序。
 
 1. 队列存储结点，默认不为叶子结点、无左子树、无右子树。
 2. 非完全二叉树的情况
