--- a/数据结构与算法/二叉树篇/【1】 二叉树前言.md
+++ b/数据结构与算法/二叉树篇/【1】 二叉树前言.md
@@ -61,9 +61,12 @@
 
 [树的子结构]()
 
+**完全二叉树的特点：叶子结点只能出现在最下层和次下层，且最下层的叶子结点集中在树的左部。**
+
 # 更多资料
 
 整理不易，若对您有帮助，请给个「关注+点赞」，您的支持是我更新的动力 👇
 
 📖数据结构专栏：[剑指 Offer 题解 + JS 代码](https://blog.csdn.net/weixin_43786756/category_10716516.html) 
 🐱Github笔记 ：[ruoruochen GitHub](https://github.com/ruoruochen/front-end-note)
+
