--- a/数据结构与算法/数组篇/NC41 最长无重复子数组.md
+++ b/数据结构与算法/数组篇/NC41 最长无重复子数组.md
@@ -23,3 +23,20 @@ function maxLength( arr ) {
     return max;
 }
 ```
+
+```js
+function maxLength( arr ) {
+    let max = 1;
+    let temp = 0;
+    let map = new Map();
+    for(let i =0;i<arr.length;i++){
+        if(map.has(arr[i])){
+            //出现重复，窗口滑动
+            temp = Math.max(temp,map.get(arr[i])+1);
+        }
+        map.set(arr[i],i);
+        max = Math.max(max,i-temp+1);
+    }
+    return max;
+}
+```
