--- a/数据结构与算法/动态规划/动态规划.md
+++ b/数据结构与算法/动态规划/动态规划.md
@@ -484,40 +484,44 @@ var longestCommonSubsequence = function (text1, text2) {
 - 初始化，一个为0 dp为0
 
 ```js
-function findStr(str1, str2) {
-  const len1 = str1.length, len2 = str2.length;
-  //dp[i][j] (i,j为下标) 是以str1[i] str[j]元素为最后一个元素的最长子串个数。
-  let dp = new Array(len1);
-  let max = 0;//最长子序列长度
-  let index = 0;
-  for (let i = 0; i < len1; i++) {
-    dp[i] = new Array(len2);
-  }
-  //初始值
-  for (let i = 0; i < len2; i++) {
-    dp[0][i] = 0;
-  }
-  for (let i = 0; i < len1; i++) {
-    dp[i][0] = 0;
-  }
-  for (let i = 1; i < len1; i++) {
-    for (let j = 1; j < len2; j++) {
-      dp[i][j] = str1[i] === str2[j] ? dp[i - 1][j - 1] + 1 : 0;
-      if (dp[i][j] > max) {
-        max = dp[i][j];
-        index = i
-      }
+function LCS( str1 ,  str2 ) {
+    //max
+    //动态规划，dp[i][j] str1以i为公共子串最后一个元素，str2以j为公共子串的最后一个元素
+    //的子串长度
+    //动态规划转移 len1>i>=1 len2>j>=1 dp[i][j] = str[i] === str2[j]?dp[i-1][j-1]+1:0;
+    // dp[i][j]>max max =  str = 
+    //初始化 dp[i][0] = str1[i] === str2[0]?1:0;
+    //dp[0][i] = str2[i] === str1[0]?1:0;
+    let max = 0 ;
+    let index = 0;
+    const len1 = str1.length,len2 = str2.length;
+    let dp = new Array(len1);
+    for(let i =0;i<len1;i++){
+        dp[i] = new Array(len2);
     }
-  }
-  if (max === 0) {
-    return "";
-  }
-
-  return str1.substr(index - max + 1, max);
+    //初始化
+    for(let i=0;i<len1;i++){
+        dp[i][0] = str1[i] === str2[0]?1:0;
+    }
+    for(let i =0;i<len2;i++){
+        dp[0][i] = str2[i] === str1[0]?1:0;
+    }
+    //动态转移
+    for(let i=1;i<len1;i++){
+        for(let j =1;j<len2;j++){
+            dp[i][j] = str1[i]===str2[j]?dp[i-1][j-1]+1:0;
+            if(dp[i][j]>max){
+                max = dp[i][j];
+                index = i
+            }
+        }
+    }
+    for(let i =0;i<len1;i++){
+        console.log(dp[i])
+    }
+    if(max === 0) return '';
+    return str1.substr(index-max+1,max);
 }
-
-
-console.log(findStr("21", "31"));//1
 ```
 
 #### 最长递增子序
