--- a/数据结构与算法/动态规划/动态规划.md
+++ b/数据结构与算法/动态规划/动态规划.md
@@ -43,7 +43,10 @@
 
 
 #### 套路：
-1、求数量：找到最终态的前一个状态，最终态的数量 = 前一个状态类型加和。
+求的是什么？最终态固不固定？
+
+1、求数量,最终态固定：找到最终态的前一个状态，最终态的数量 = 前一个状态类型加和。
+2、求最大值、最小值，最终态固定：找到最终态的前一个状态，最终态的数量 = 前一个状态类型最大/最小 + 最终态数值。
 
 ### 二、案例分析
 
