--- a/数据结构与算法/动态规划/动态规划.md
+++ b/数据结构与算法/动态规划/动态规划.md
@@ -48,6 +48,8 @@
 1、求数量,最终态固定：找到最终态的前一个状态，最终态的数量 = 前一个状态类型加和。
 2、求最大值、最小值，最终态固定：找到最终态的前一个状态，最终态的数量 = 前一个状态类型最大/最小 + 最终态数值。
 
+3、最终态不固定，设计坐标，定义从0开始，涉及长度，定义从1开始（一般以len为单位）
+
 ### 二、案例分析
 
 #### 案例一：跳台阶
