--- a/数据结构与算法/动态规划/动态规划.md
+++ b/数据结构与算法/动态规划/动态规划.md
@@ -49,6 +49,7 @@
 2、求最大值、最小值，最终态固定：找到最终态的前一个状态，最终态的数量 = 前一个状态类型最大/最小 + 最终态数值。
 
 3、最终态不固定，设计坐标，定义从0开始，涉及长度，定义从1开始（一般以len为单位）
+4、连续子串，子序列，一般定义与以i结尾有关。
 
 ### 二、案例分析
 
@@ -107,6 +108,18 @@ var numWays = function (n) {
 }
 ```
 
+```js
+var numWays = function(n) {
+    let a =1,b =1,c;
+    if(n<=1) return 1;
+    for(let i =2;i<=n;i++){
+        c = (a + b)%1000000007;
+        a = b;
+        b = c;  
+    }
+    return c;
+};
+```
 #### 案例二：路径数
 
 [leetcode 62 不同路径](https://leetcode-cn.com/problems/unique-paths/)
