--- a/数据结构与算法/动态规划/300. 最长递增子序列.md
+++ b/数据结构与算法/动态规划/300. 最长递增子序列.md
@@ -66,7 +66,7 @@ function LIS( arr ) {
             temp.push(arr[i]);
             dp[i] = temp.length;
         }else{
-            //不比最后一个大 二分法找到arr[i]>=temp序列中的哪个值
+            //此时temp有序，通过二分法查找arr[i]在temp中的位置，即可得到dp[i]的最长递增长度
             let left = 0,right = temp.length-1;
             while(left<=right){
                 let mid = Math.floor((left+right)/2);
@@ -79,6 +79,7 @@ function LIS( arr ) {
                     break;
                 }
             }
+            //为什么要更新temp?
             temp[left] = arr[i];
             //更新递增长度
             dp[i] = left+1;
