回溯法总结

--- a/数据结构与算法/回溯法/回溯法.md
+++ b/数据结构与算法/回溯法/回溯法.md
@@ -16,44 +16,11 @@
 
 简单来说，回溯法可以理解成为通过选择不同的岔路口，来寻找目的地，一个岔路口一个岔路口的去尝试找到目的地，如果走错了路的话，继续返回到上一个岔路口的另外一条路，直到找到目的地。
 
-### 算法模板
-
-可以按照3个步骤来思考这类的问题：
-
-1. **「路径」**：记录做出的选择。
-2. **「选择列表/状态变量」**：通常而言，用数组存储可以选择的操作，或用状态变量记录当前操作位置。
-3. **「结束条件」**：一般而言，就是递归的结束点，也就是搜索的结束点。
-
-```js
-result = []
-
-function backtrack(路径, 选择列表) {
-    if('满足结束条件') {
-        // 这里就是对答案做更新,依据实际题目出发
-        result.push(路径)
-        return
-    } else {
-        for(let i = 0; i < 选择列表.length; i++) {
-            // 对一个选择列表做相应的选择
-            
-            做选择
-            
-            backtrack(路径, 选择列表)
-            
-            // 既然是回溯算法,那么在一次分岔路做完选择后
-            // 需要回退我们之前做的操作
-            
-            撤销选择
-        }
-    }
-}
-```
-
 ### 回溯算法题的解题思路
 
 使用刻意练习的方法训练回溯算法：
 
-1、画出递归树，找到状态变量。即函数中的变量。
+1、画出递归树，找到状态变量。即函数中的变量。（递归树寻找法：找到每个变量有几种状态，在一层中枚举这些状态）
 
 2、找出递归出口。
 
