最长递增子序列题解修改

--- a/数据结构与算法/动态规划/300. 最长递增子序列.md
+++ b/数据结构与算法/动态规划/300. 最长递增子序列.md
@@ -3,16 +3,15 @@
 
 动态规划思想刻意练习：
 符合最长、最大、最小、数量标准，且数量大，采用动态规划。
-1、找定义，一般与所求相关，要求最长递增子序列的长度，那么我们定义：dp[i]为从坐标0-i的最长递增子序列长度。则我们要求的就是dp中，最大值。
-2、动态转移方程：当前递增要最长，前面子序列的递增也要最长，要保证递增，就需要拿当前nums[i]与前面的nums[j]进行比较，并且j需要从0开始遍历到i-1，
-可得：dp[i] = max(dp[i],dp[j]+1) (i从1开始遍历，j每次都从0开始遍历到i-1)
-3、初始化：dp[i] = 1;
+
+1、定义：dp[i]为以i为最后一个递增子序列的元素，递增长度。题目所求为dp max
+
+2、转移：当前元素与前面的递增长度作比较，如果nums[i]<nums[j] j 从 0 到 i-1，则取max(当前递增长度dp[i]，dp[j]+1)，否则不变。
+
+3、初始值：每个元素的递增长度为1
 
 ```js
 var lengthOfLIS = function(nums) {
-    //定义： dp[i] 为坐标0 - i的最长递增长度 所求，dp[len-1]
-    //状态转移 if(nums[i]>nums[j]) dp[i] = max(dp[i],dp[j]+1);//j从0到i
-    //初始化dp[i] = 1;
     let len = nums.length,max=1;
     if(len === 1) return 1;
     let dp = new Array(len).fill(1);
