环形约瑟夫

--- a/数据结构与算法/链表篇/牛客NC132 环形链表的约瑟夫问题.md
+++ b/数据结构与算法/链表篇/牛客NC132 环形链表的约瑟夫问题.md
@@ -28,23 +28,17 @@ function ysf( n ,  m ) {
 数组模拟环
 ```js
 function ysf( n ,  m ) {
-    //数组模拟环
-    let arr = [];
-    for(let i =0;i<n;i++){
-        arr[i] = i+1;
+    // 使用数组模拟
+    let arr =[],count=0;
+    for(let i=0;i<n;i++){
+        arr.push(i+1);
     }
     //开始游戏
-    let index = 0; //当前报数人
+    let index = 0;
     while(arr.length>1){
-        //计算删除结点的下标
-        index = (index+m)%arr.length -1;
-        if(index>=0){
-            arr.splice(index,1);
-        }else{
-            //删除末尾元素
-            arr.splice(arr.length-1,1);
-            index = 0;
-        }
+        //计算删除的位置
+        index = (index+m-1)%arr.length;
+        arr.splice(index,1);
     }
     return arr[0];
 }
