合并有序数组

--- a/数据结构与算法/数组篇/NC22 合并两个有序的数组.md
+++ b/数据结构与算法/数组篇/NC22 合并两个有序的数组.md
@@ -6,6 +6,8 @@ function merge( A, m, B, n ) {
     for(let i =0;i<n;i++){
         A[m+i] = B[i];
     }
+    //2、splice放进尾巴
+    //A.splice(m,0,...B)
     A.sort((a,b)=>a-b);
 }
 ```
