--- a/项目总结/React个人博客/开发过程中遇到的问题及知识点.md
+++ b/项目总结/React个人博客/开发过程中遇到的问题及知识点.md
@@ -25,3 +25,35 @@ https://segmentfault.com/a/1190000020294373
 #### 如何控制公共对话框的显示与隐藏。
 
 通过eventEmitter监听事件，点击某个按钮时，触发事件，并把数据传递进对话框组件中，实现数据传递以及Visible控制。
+
+#### 后台管理系统复用之前使用Vue开发的，如何实现管理系统不用再次登录，直接拿到Token登录后台管理系统。
+
+在React blog中，采用JWT进行鉴权，token存在storage中，vue管理系统和react blog系统不同源，不能访问到storage中的token，因此要重新输入账号密码登录。
+
+预期：用户点击后台管理，直接进入后台管理系统。
+
+**解决方案：跨域存储。**
+
+可跨域通信的机制： postMessage，它可以安全的实现跨域通信，不受同源策略限制。
+
+语法：
+
+```js
+otherWindow.postMessage('message', targetOrigin, [transfer])
+```
+
+- otherWindow：窗口的一个引用，如：iframe 的 contentWindow 属性、当前 window 对象、window.open 返回的窗口对象等。
+- message 将要发送到 otherWindow 的数据
+- targetOrigin 通过窗口的 targetOrigin 属性来指定哪些窗口能接收到消息事件，其值可以是字符串 “*”（表示无限制）
+
+**实现思路**
+
+需求：有两个不同的域名（react bloghttp://localhost:3000 和 vue managehttp://localhost:8080）想共用本地存储中的同一个 token 作为统一登录凭证。
+
+1. 在react blog中，跳转页面的同时，postMessage发送token。
+
+   ![image-20211205221049864](https://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/202112052210112.png)
+
+2. 在vue manage导航守卫中，监听message事件，拿到token，存入storage中进行使用。
+
+   ![image-20211205221142479](https://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/202112052211532.png)
