金字塔原理笔记更新

--- a/读书笔记（其他）/金字塔原理/金字塔原理.md
+++ b/读书笔记（其他）/金字塔原理/金字塔原理.md
@@ -148,3 +148,48 @@ C：伦敦比其他城市更早流行留长胡子
 
 - 分析方式是推理演绎，组织方式就是演绎方式。
 - 分析方式是因果关系，组织方式就是时间顺序。
+
+## 二、金字塔内部的结构
+
+![20220327215937](https://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/20220327215937.png)
+
+### 如何搭建金字塔子结构？
+
+1. 纵向关系
+2. 横向关系
+3. 序言的结构
+
+#### 1. 纵向关系
+
+通过引导一种疑问/回答式的对话，迫使读者与作者思路相符，直到读者不会提出任何疑问。
+![20220327220303](https://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/20220327220303.png)
+
+#### 2. 横向关系
+
+组织思想的方式：归纳、演绎。
+
+#### 3. 序言的结构
+
+**如何引发读者发出疑问？**
+
+序言向读者说明背景、冲突、疑问、回答。
+
+**如何组织一个好的序言？**
+
+不要着急下笔，先构思结构。
+
+如果自己能明确的主题，可以采用自上而下的方法构建金字塔：
+
+1.  提出主题思想
+2.  设想读者疑问
+3.  写序言：背景、冲突、疑问、回答
+4.  与读者进行交互式的疑问/回答式对话
+5.  产出新疑问，重复疑问/回答式对话
+
+![20220327220620](https://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/20220327220620.png)
+
+如果不能准确确定主题，可以尝试自下而上思考的方法构建：
+
+1. 罗列主要观点
+2. 找出观点逻辑
+3. 得出结论
