md: 增加读书笔记

--- a/读书笔记（其他）/自控力/自控力.md
+++ b/读书笔记（其他）/自控力/自控力.md
@@ -32,3 +32,33 @@ TODO:设定一个期限，控制自己以前不会去控制的小事。
 - 增强自我监控：监控支出、监控饮食、监控上网时间
 
 ## 三、渴望 !== 快乐
+
+## 四、情绪低落为何会使人屈服于诱惑
+
+> 当你情绪低落的时候，你会怎么让自己高兴起来呢？如果你和大多数人一样，你就会选择奖励的承诺。
+>
+> 奖励的承诺并不总意味着我们会得到快乐。通常，我们缓解压力的办法反而会让我们更有压力。
+
+因此，我们需要找到一种方法，既能让自己快乐又不屈服于诱惑。
+
+### 意志力实验：尝试一种解压的方法
+
+> 真正能缓解压力的不是释放多巴胺或依赖奖励的承诺，而是增加大脑中改善情绪的化学物质，如血清素、γ-氨基丁酸和让人感觉良好的催产素。这些物质还会让大脑不再对压力产生反应，减少身体里的压力荷尔蒙，产生有治愈效果的放松反应。因为它们不像释放多巴胺的物质那样让人兴奋，所以我们往往低估了它们的作用.
+
+当焦虑、注意力分散时，可以尝试以下几种解压方法：
+
+1. 运动。腹肌运动、俯卧撑。
+2. 阅读。**（不能阅读学习类书籍）**，一些故事类书籍。
+
+**小诀窍：**
+
+- 让自己鼓励自己，解压方法能让我感到更快乐。
+
+### 意志力实验：失败的时候，请原谅自己
+
+> “每个人都会犯错误，都会遭遇挫折。既然失败无法避免，更重要的就是我们如何应对失败。”
+
+自我谅解：“不要苛求自己，要记住每个人都有放纵自己的时候。”
+那又如何：“那又如何，既然我已经破坏了 xx 计划，不如 xx 到底”
+
+学会自我谅解，思考为什么会失败，而不是自我批评。
