--- a/读书笔记（其他）/金字塔原理/金字塔原理.md
+++ b/读书笔记（其他）/金字塔原理/金字塔原理.md
@@ -1,6 +1,6 @@
 # 金字塔原理
 
-## 前言
+## 0 前言
 
 > “想清楚，说明白，知道说什么、怎么说”，是我们希望达到的境界。
 
@@ -50,9 +50,9 @@
 3. 解决问题的逻辑：分析组织
 4. 延时的逻辑：金字塔结构演示
 
-## 一、表达的逻辑
+## 1、表达的逻辑
 
-### 自上而下表达，结论先行
+### 1.1 自上而下表达，结论先行
 
 🙅 错误表达：
 
@@ -105,7 +105,7 @@ C：伦敦比其他城市更早流行留长胡子
 
 因为雇主会通过多雇用男员工的方式，去规避这个政策。导致女员工失业、找工作难，男女员工平均收入差距会越来越大。
 
-### 自下而上思考，总结概括
+### 1.2 自下而上思考，总结概括
 
 文章中的思想应组成单一思想统领下的金字塔结构
 
@@ -149,11 +149,11 @@ C：伦敦比其他城市更早流行留长胡子
 - 分析方式是推理演绎，组织方式就是演绎方式。
 - 分析方式是因果关系，组织方式就是时间顺序。
 
-## 二、金字塔内部的结构
+## 2、金字塔内部的结构
 
 ![20220327215937](https://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/20220327215937.png)
 
-### 如何搭建金字塔子结构？
+### 2.1 如何搭建金字塔子结构？
 
 1. 纵向关系
 2. 横向关系
@@ -193,3 +193,61 @@ C：伦敦比其他城市更早流行留长胡子
 1. 罗列主要观点
 2. 找出观点逻辑
 3. 得出结论
+
+## 演绎推理与归纳推理
+
+金字塔中的思想以 3 种方式互相关联——**向上、向下和横向**。
+
+- 位于一组思想的上一个层次的思想是对这一组思想的概括，这一组思想则是对其上一层次思想的解释和支持。
+- 同一组中的思想之间存在着逻辑顺序，具体的顺序取决于该组思想之间的逻辑关系是演绎推理关系，还是归纳推理关系。
+
+**演绎与归纳的区别**
+
+- 演绎是一种线性的推理方式，最终是为了得出一个由逻辑词“因此”引出的结论。
+- 归纳推理是将一组具有共同点的事实、思想或观点归类分组，并概括其共同性（或论点）。
+
+换种说法：
+
+- 演绎：第二点是对第一点对主语/谓语进行论述。
+- 归纳：同组思想具有相同的主语/谓语。
+
+### 演绎推理
+
+#### 演绎推理的步骤
+
+演绎推理的步骤：
+
+1. 已存在的情况。
+2. 同时存在的相关情况。（推理过程的第二个思想必须是对第一个思想的主语或谓语的评述。）
+3. 说明这两种情况同时存在隐含的意义。
+
+或：
+
+1. 出现的问题或存在的的现象
+2. 产生问题的原因
+3. 解决问题的方案
+
+#### 演绎推理的应用
+
+在关键句层次上尽可能使用归纳法代替演绎法。**但不是绝对的**
+
+- 最好先说明行动，后说明原因，因为要采取哪些行动才是读者最关心的。
+- 在极少数情况下，读者也可能更关心采取行动的原因。
+- 1.演绎推理的过程不要超过 4 个步骤； 2.推导出的结论不要超过两个。
+
+差的推理过程：先阅读完所有问题，看到原因时，得一一对应上文的问题，措施同理。思维跳跃。
+
+![20220411140021](https://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/20220411140021.png)
+
+好的推理过程：先给行动，再阐述问题、原因。思维连贯。
+
+![20220411140132](https://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/20220411140132.png)
+
+### 归纳推理
+
+归纳推理：
+
+- 找到一个能够表示该组所有思想的**单一名词**。
+- 在归纳过程中，通常需要保持主语不变，改变谓语；或者保持谓语不变、改变主语。
+
+# 3. 思考的逻辑
